Adding existence code

--- a/test/jquery.existence.html
+++ b/test/jquery.existence.html
@@ -18,10 +18,11 @@
 </head>
 <body>
   <div id="qunit"></div>
-  <div id="qunit-fixture">
+  <div id="has-children">
     <span>lame test markup</span>
     <span>normal test markup</span>
     <span>awesome test markup</span>
   </div>
+  <div id="no-children"></div>
 </body>
 </html>
