--- a/test/jquery.existence.html
+++ b/test/jquery.existence.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>jQuery Existence Test Suite</title>
   <!-- Load local jQuery. This can be overridden with a ?jquery=___ param. -->
-  <script src="../libs/jquery-loader.js"></script>
+  <script src="../libs/jquery/jquery.min.js"></script>
   <!-- Load local QUnit. -->
   <link rel="stylesheet" href="../libs/qunit/qunit.css" media="screen">
   <script src="../libs/qunit/qunit.js"></script>
